@@ -124,12 +124,7 @@
         <version>3.0.0-M1</version>
         <configuration>
           <trimStackTrace>false</trimStackTrace>
-          <systemProperties>
-            <property>
-              <name>forkMode</name>
-              <value>none</value>
-            </property>
-          </systemProperties>
+          <argLine>--add-opens stormpot/stormpot=ALL-UNNAMED</argLine>
         </configuration>
       </plugin>
       <plugin>
@@ -187,9 +182,6 @@
           <targetClasses>
             <param>stormpot.*</param>
           </targetClasses>
-          <excludedGroups>
-            <excludedGroup>stormpot.slow.SlowTest</excludedGroup>
-          </excludedGroups>
           <threads>4</threads>
           <jvmArgs>
             <value>-ea</value>
@@ -266,21 +258,15 @@
 
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>5.5.1</version>
       <scope>test</scope>
-      <exclusions>
-        <exclusion>
-          <groupId>org.hamcrest</groupId>
-          <artifactId>hamcrest-core</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
     <dependency>
-      <groupId>org.hamcrest</groupId>
-      <artifactId>hamcrest-all</artifactId>
-      <version>1.3</version>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>3.12.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
